# msp432p401r-gate-tester

./: Cargo.toml  README.md  memory.x  openocd.gdb
.cargo/: config
src/: main.rs
