[package]
name = "msp432p401r-gate-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msp432p401r-hal = { git = "https://github.com/msp432-rust/msp432p401r-hal", features = ["rt"] }
msp432p401r-pac = { version = "0.3.0", features =["rt"] }
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
nb = "1.0.0"
panic-halt = "0.2.0"
irq = "0.2.3"
embedded-hal = "1.0.0-alpha.6"

[profile.release]
strip = true
lto = true
codegen-units = 1

[features]
rt = ["msp432p401r-pac/rt"]
